--- a/notes/meeting_minutes/05-31-2025.md
+++ b/notes/meeting_minutes/05-31-2025.md
@@ -2,8 +2,10 @@
 
 ## Overview
 
-These minutes summarize the key points discussed and actions taken during today’s meeting.  
-Please feel free to add your comments in a thread under this post if you find anything missing or necessary to mention.
+These minutes summarize the key points discussed and actions taken during
+today’s meeting.  
+Please feel free to add your comments in a thread under this post if you find
+anything missing or necessary to mention.
 
 ---
 
@@ -13,9 +15,9 @@ Please feel free to add your comments in a thread under this post if you find an
 
 - Finalized the setup of the GitHub repository.
 - Completed configurations:
-  - ✅ Project board fixed  
-  - ✅ Branch protection settings enabled  
-  - ✅ Pull request template added  
+  - Project board fixed  
+  - Branch protection settings enabled  
+  - Pull request template added  
 
 ### **2. Meeting Schedule**
 
@@ -30,13 +32,16 @@ Please feel free to add your comments in a thread under this post if you find an
   - Communication Plan  
   - Learning Goals  
 
-- A **GitHub issue** was created for task tracking and has been **assigned to all group members**.
+- A **GitHub issue** was created for task tracking and has been **assigned to
+  all group members**.
 
 ---
 
 ## Next Steps
 
-1. Team to add their input to the **group norms** document
-3. Be prepared to **review and refine all draft deliverables** in the next meeting.
+1. Add your input to the **group norms** document if you haven’t already.
+2. Check your assigned task in the GitHub issue and begin work.
+3. Be prepared to **review and refine all draft deliverables** in the next
+   meeting.
 
 ---
